test/errors/error30.base
The expression 'x' of type 'array(int, 1)' does not have a member 'e'.
  val x = [1];
  val y = x.e;
            ^
